# parking-radar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.live.yml  docker-compose.odroid.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/core/: config.py  time_utils.py
backend/app/db/: session.py
backend/app/services/: analytics.py  collection.py  fee_calculator.py  parsers.py  sample_data.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_collection_service.py  test_fee_calculator.py  test_lifespan.py  test_parsers.py
backend/tests/fixtures/: incheon_parking.json  kac_congestion_gmp.xml  kac_fee_gmp.xml  kac_parking_rt.xml
deploy/odroid/: README.md  bootstrap-docker.sh  remote-deploy.sh
docs/: analytics.md  architecture.md  current-state.md  data-model.md  data-sources.md  deployment.md  project-brief.md  remote-command-safety.md  testing.md  time-and-collector.md  troubleshooting.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: dashboard-app.tsx  dashboard-screen.tsx  fee-calculator.tsx  history-chart.tsx
frontend/src/lib/: api.ts  dashboard-preferences.ts  format.ts  types.ts
frontend/tests/: api.test.ts  dashboard-app.test.tsx  dashboard.test.tsx  fee-calculator.test.tsx  format.test.ts  history-chart.test.tsx
scripts/: deploy-odroid.ps1  odroid-status.ps1
